<resources>
    <string name="app_name">Калькулятор топлива</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="average_fuel_consumption_string">Средний расход топлива, литров/100км</string>
    <string name="hint_average_fuel_consumption">6.5</string>
    <string name="distance_tv">Расстояние в километрах</string>
    <string name="hint_distance_ed">100</string>
    <string name="fuel_price_tv">Стоимость 1 литра топлива</string>
    <string name="hint_fuel_price_ed">45.5</string>
    <string name="passengers_count_tv">Количество пассажиров</string>
    <string name="hint_count_of_passengers_ed">3</string>
    <string name="calculate_button_trip_price">Посчитать</string>
    <string name="empty_error_msg">Поле не может быть пустым</string>
    <string name="fill_car">Залейте</string>
    <string name="fuel_need_example">%s литров</string>
    <string name="article">на</string>
    <string name="distance_example">%s километров</string>
    <string name="genrral_price_tv">Общая стоимость</string>
    <string name="general_price_example">%s рублей</string>
    <string name="by_person_tv">С человека</string>
    <string name="by_person_example">%s рублей</string>
    <string name="amount_of_fuel_distance">Количество топлива в литрах</string>
    <string name="max_distance">Максимальная дальность поездки</string>
    <string name="max_distance_kilometers">%s километров</string>
    <string name="trip_price">Стоимость</string>
    <string name="kilometers">%s километров</string>
    <string name="rubles">%s рублей</string>
    <string name="cons_litersOnKm">%s литров/100км</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="values_cannot_be_same">Значения пробегов не могут быть одинаковыми!</string>
    <string name="calc_by_consumption">Посчитать по:</string>
    <string name="error_msg_current_mileage_less_then_previous">Значение текущего пробега не может быть меньше предыдущего!</string>
    <string name="my_trips_action_bar">Мои поездки</string>
    <string name="Mileage_history">История показаний пробега</string>
    <string name="Fuel_calculator">Топливный калькулятор</string>
    <string name="prev_mileage_hint">75.000</string>
    <string name="current_mileage_hint">75480</string>
    <string name="filled_fueL_hint">18</string>
    <string name="prev_mileage_hintt">75.340</string>
    <string name="hitn_filled_fuel">28</string>
    <string name="amount_of_fuel_hint">25</string>
    <string name="calc_cons_toolbar">Расчет расхода топлива</string>
    <string name="calc_price_toolbar">Стоимость поездки</string>
    <string name="calc_distance_toolbar">Максимальное расстояние</string>
    <string name="hint_distance">450</string>
    <string name="distance_gone">Пройденное расстояние в километрах</string>
    <string name="hint_distance_gone">400</string>
    <string name="Fuel_went">Затраченно литров топлива</string>
    <string name="fuel_went_hint">34</string>
    <string name="Incorrect_mileage">Некорректное значение пробега!</string>
    <string name="Dot">.</string>
    <string name="fuel_cons_is">Расход топлива равен:</string>
    <string name="saved_string">Сохранено!</string>
    <string name="add_result_to_statistic">Добавить результат в статистику</string>
    <string name="previoues_mileage">Предыдущее показание пробега в километрах</string>
    <string name="save_prev_mileage">Сохранять предыдущий пробег</string>
    <string name="current_mileage">Текущее показание пробега в километрах</string>
    <string name="filled_fuel">Затрачено топлива в литрах</string>
    <string name="incorrect_value">Некорректное значение</string>
    <string name="dot">.</string>
    <string name="no_data">Нет данных</string>
    <string name="entry_details">Информация о выбранной точке:</string>
    <string name="mileage_stats">Пробег %s км</string>
    <string name="cons_stats">Расход %s л/100км</string>
    <string name="mileage_info">Здесь будет информация о пробеге</string>
    <string name="cons_info">Здесь будет информация о расходе</string>
    <string name="stoped_removing">Удаление отменено</string>
    <string name="dont_remove">Не удалять</string>
    <string name="remove">Удалить</string>
    <string name="accept_removing">Подтвердите удаление вершины</string>
    <string name="choose_dot">Выберите вершину</string>
    <string name="rub">руб.</string>
    <string name="km">км</string>
    <string name="liters">литров</string>
    <string name="test_price_hint">Price</string>
    <string name="trip_name">Название поездки</string>
    <string name="for_distance_km">Для расстояния, км</string>
    <string name="need_fuel_liters">Вам нужно литров топлива</string>
    <string name="general_price_rub">Общая стоимость, руб</string>
    <string name="by_everypne_rub">С человека по, руб</string>
    <string name="save_btn">Сохранить</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="trip_name_default">Поездка длительностью %s километров</string>
    <string name="mail_topic">Топливный калькулятор</string>
    <string name="no_emails_client">There are no email clients installed.</string>
    <string name="send_email">Отправить письмо</string>
    <string name="stats_string">Статистика</string>
    <string name="trips_string">Мои поездки</string>
    <string name="about_string">О приложении</string>
    <string name="share_string">Рассказать другу</string>
    <string name="communicate_string">Связь с разработчиком</string>
    <string name="rate_string">Оценить</string>
    <string name="cons_stats_string">Показания расхода</string>
    <string name="communicate_strings">Связь</string>
    <string name="fuel_calculator">Топливный калькулятор</string>
    <string name="this_app_helps">Это приложение поможет:</string>
    <string name="calc_trip_price_fun">- Посчитать стоимость поездки;</string>
    <string name="calc_max_distance_fun">- Посчитать максимальное расстояние;</string>
    <string name="calc_cons_fun">- Посчитать расход топлива автомобиля;</string>
    <string name="stats_fun">- Вести учет полученных показаний пробега и запоминать стоимости поездок</string>
    <string name="mixed_regime_string">Смешанный режим езды</string>
    <string name="city_drive_regime">Городской режим езды</string>
    <string name="track_drive_regime">Режим езды по трассе</string>

    <string-array name="calc_consumption_of">
        <item>Показаниям пробега</item>
        <item>Пройденному расстоянию</item>
    </string-array>

    <string-array name="stats_spinner">
        <item>Не добавлять</item>
        <item>Смешанный режим езды</item>
        <item>Городской режим езды</item>
        <item>Трассовый режим езды</item>
    </string-array>

</resources>