<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/stats_string">

        <menu>

            <item
                android:id="@+id/statistic"
                android:title="@string/cons_stats_string"
                />

            <item
                android:id="@+id/trips"
                android:title="@string/trips_string"
                />

        </menu>

    </item>


    <item android:title="@string/communicate_strings">

        <menu>

            <item
                android:id="@+id/about"
                android:title="@string/about_string"
                />

            <item
                android:id="@+id/share"
                android:title="@string/share_string"
                />

            <item
                android:id="@+id/communicate"
                android:title="@string/communicate_string"
                />

            <item
                android:id="@+id/rate"
                android:title="@string/rate_string"
                />

        </menu>

    </item>

</menu>