<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.price.screens.PriceFragment">

    <TextView
        android:id="@+id/tv_averageFuelConsumption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/average_fuel_consumption_string"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_averageFuelConsumption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_averageFuelConsumption"
        android:layout_marginHorizontal="20dp"
        />

    <EditText
        android:id="@+id/et_averageFuelConsumption"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_average_fuel_consumption"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_averageFuelConsumption"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance_tv"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_distance"
        app:layout_constraintStart_toStartOf="@id/tv_averageFuelConsumption"
        app:layout_constraintEnd_toStartOf="@id/et_distance"
        />

    <EditText
        android:id="@+id/et_distance"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_distance"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/et_averageFuelConsumption"
        app:layout_constraintStart_toEndOf="@id/tv_distance"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/tv_fuel_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fuel_price_tv"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_fuel_price"
        app:layout_constraintStart_toStartOf="@id/tv_distance"
        app:layout_constraintEnd_toStartOf="@id/et_fuel_price"
        />

    <EditText
        android:id="@+id/et_fuel_price"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fuel_price_ed"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_distance"
        app:layout_constraintStart_toEndOf="@id/tv_fuel_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_count_of_passengers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/passengers_count_tv"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_count_of_passengers"
        app:layout_constraintStart_toStartOf="@id/tv_fuel_price"
        app:layout_constraintEnd_toStartOf="@id/et_count_of_passengers"
        />

    <EditText
        android:id="@+id/et_count_of_passengers"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_count_of_passengers_ed"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/et_fuel_price"
        app:layout_constraintStart_toEndOf="@id/tv_count_of_passengers"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        tools:ignore="LabelFor"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/calcPrice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_trip_price"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/et_count_of_passengers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>