<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fill_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_car"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/liters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_need_example"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/fill_car"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        />

    <TextView
        android:id="@+id/on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/liters"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/tv_kilometers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_example"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/on"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        />

    <TextView
        android:id="@+id/tv_general_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genrral_price_tv"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_kilometers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/distance_price_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_price_example"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_general_price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        />

    <TextView
        android:id="@+id/tv_for_everyone_trip_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_person_tv"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/distance_price_ed"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/tv_value_price_for_everyone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_person_example"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/tv_for_everyone_trip_price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45dp"
        />

    <ImageButton
        android:id="@+id/save_btn_price"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_save_into_db"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_value_price_for_everyone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/isSaved_price"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/isSaved_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Сохранено!"
        android:visibility="gone"
        android:textSize="22sp"
        android:textColor="@color/green"
        app:layout_constraintTop_toTopOf="@id/save_btn_price"
        app:layout_constraintStart_toEndOf="@id/save_btn_price"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>