<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.about.AboutDialogFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:title="@string/fuel_calculator"
        android:background="#DCDCDC"
        />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/this_app_helps"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:id="@+id/price_fun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calc_trip_price_fun"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="@id/title_text"
        app:layout_constraintEnd_toEndOf="@id/title_text"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/distance_fun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calc_max_distance_fun"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/price_fun"
        app:layout_constraintStart_toStartOf="@id/price_fun"
        app:layout_constraintEnd_toEndOf="@id/price_fun"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/cons_fun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calc_cons_fun"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/distance_fun"
        app:layout_constraintStart_toStartOf="@id/distance_fun"
        app:layout_constraintEnd_toEndOf="@id/distance_fun"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/stats_fun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stats_fun"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/cons_fun"
        app:layout_constraintStart_toStartOf="@id/cons_fun"
        app:layout_constraintEnd_toEndOf="@id/cons_fun"
        android:layout_marginTop="10dp"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/stats_fun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>