<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.consumption.screens.distance.ConsDistanceFragment">

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="Пройденное расстояние"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_distance"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_average_fuel_consumption"
            android:inputType="numberDecimal"
            android:text="400"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_filled_fuel_distance"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="Залито топлива"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_filled_fuel_distance"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="150dp"
            android:hint="@string/hint_fuel_price_ed"
            android:inputType="numberDecimal"
            android:text="40"
            android:textSize="18sp" />

        <Button
            android:id="@+id/calc_button_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:text="@string/calculate_button_trip_price" />


</FrameLayout>